funciona leyendo el config por fin

--- a/config.ini
+++ b/config.ini
@@ -5,12 +5,22 @@
 # Ruta a la base de datos SQLite (en contenedor)
 path = /app/data/musica.sqlite
 
+[system]
+# Usuario base del contenedor (el que ejecuta la app y tiene las claves SSH)
+base_user = huan
+# UID y GID (se pueden sobrescribir con PUID/PGID en docker-compose)
+uid = 1000
+gid = 1000
+
 [download]
 # Directorio donde se guardarán las descargas
 path = /downloads
-# Configuración SSH para descargar desde pepecono
-ssh_host = pepecono
+# Usuario del servidor de música remoto
 ssh_user = pepe
+# Host del servidor de música remoto
+ssh_host = pepecono
+# Ruta específica de la clave SSH (opcional, si no se especifica usa: /home/base_user/.ssh/ssh_user@ssh_host)
+ssh_key_path = /home/huan/.ssh/pepecono
 
 [web]
 # Puerto del servidor web
