--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -14,9 +14,9 @@ stdout_logfile=/app/logs/nginx_access.log
 [program:flask_app]
 command=python3 /app/app.py
 directory=/app
-user=musicapp
+user=%(ENV_BASE_USER)s
 autostart=true
 autorestart=true
 stderr_logfile=/app/logs/flask_error.log
 stdout_logfile=/app/logs/flask_output.log
-environment=PYTHONPATH="/app"
+environment=PYTHONPATH="/app",SSH_USER="%(ENV_SSH_USER)s",SSH_HOST="%(ENV_SSH_HOST)s",SSH_KEY_PATH="%(ENV_SSH_KEY_PATH)s"
