telegram y manejo de descarga de carpeta montada localmente

--- a/config.ini
+++ b/config.ini
@@ -5,22 +5,24 @@
 # Ruta a la base de datos SQLite (en contenedor)
 path = /app/data/musica.sqlite
 
-[system]
-# Usuario base del contenedor (el que ejecuta la app y tiene las claves SSH)
-base_user = huan
-# UID y GID (se pueden sobrescribir con PUID/PGID en docker-compose)
-uid = 1000
-gid = 1000
+[music]
+# NUEVO: Soporte para acceso directo a archivos
+local_access_enabled = true
+# Rutas base que se montarán en el contenedor (separadas por comas)
+mounted_paths = /mnt/NFS
+# Prefijo alternativo si las rutas del contenedor difieren (opcional)
+# path_mapping = /mnt/NFS:/app/music
 
 [download]
 # Directorio donde se guardarán las descargas
 path = /downloads
-# Usuario del servidor de música remoto
-ssh_user = pepe
-# Host del servidor de música remoto
+# Configuración SSH para descargar desde pepecono
 ssh_host = pepecono
-# Ruta específica de la clave SSH (opcional, si no se especifica usa: /home/base_user/.ssh/ssh_user@ssh_host)
-ssh_key_path = /home/huan/.ssh/pepecono
+ssh_user = pepe
+# Clave SSH específica (opcional)
+ssh_key = /home/huan/.ssh/pepecono
+# NUEVO: Método de descarga preferido ('local' o 'ssh')
+preferred_method = local
 
 [web]
 # Puerto del servidor web
@@ -29,6 +31,12 @@ port = 5157
 debug = false
 # Host (0.0.0.0 para acceso desde contenedor)
 host = 0.0.0.0
+
+[telegram]
+# Notificaciones de Telegram (opcional)
+enabled = false
+bot_token = 
+chat_id = 
 
 [external_apis]
 # API Key de Last.fm (opcional)
