tema oscuro mas simple

--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ path = /app/data/musica.sqlite
 # NUEVO: Soporte para acceso directo a archivos
 local_access_enabled = true
 # Rutas base que se montarán en el contenedor (separadas por comas)
-mounted_paths = /mnt/NFS
+mounted_paths = /mnt/NFS/moode/moode,/home/huan/gits/pollo/music-fuzzy/.content
 # Prefijo alternativo si las rutas del contenedor difieren (opcional)
 # path_mapping = /mnt/NFS:/app/music
 
