--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - /mnt/NFS/moode/moode:/mnt/NFS/moode/moode:ro
  
       - /home/huan/gits/pollo/music-fuzzy/.content/:/home/huan/gits/pollo/music-fuzzy/.content/:ro
+
+      - /home/huan/gits/pollo/music-fuzzy/ui/svg/:/home/huan/gits/pollo/music-fuzzy/ui/svg/:ro
     
     environment:
       - PYTHONUNBUFFERED=1
