--- a/config.ini
+++ b/config.ini
@@ -44,7 +44,7 @@ lastfm_api_key = 2d3ec155a95da0a1b2e4aac358c717d3
 
 [logging]
 # Nivel de log (DEBUG, INFO, WARNING, ERROR)
-level = INFO
+level = DEBUG
 # Archivo de log
 file = /app/logs/music_web.log
 
