--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,8 @@ path = /app/data/musica.sqlite
 # NUEVO: Soporte para acceso directo a archivos
 local_access_enabled = true
 # Rutas base que se montarán en el contenedor (separadas por comas)
-mounted_paths = /mnt/NFS/moode/moode,/home/huan/gits/pollo/music-fuzzy/.content,/home/huan/gits/pollo/music-fuzzy/ui/svg/
+#mounted_paths = /mnt/NFS/moode/moode,/home/huan/gits/pollo/music-fuzzy/.content,/home/huan/gits/pollo/music-fuzzy/ui/svg/
+mounted_paths = /app/images
 # Prefijo alternativo si las rutas del contenedor difieren (opcional)
 # path_mapping = /mnt/NFS:/app/music
 
@@ -53,3 +54,13 @@ file = /app/logs/music_web.log
 web_root = /app/static
 server_name = localhost
 port = 80
+
+[images]
+# Directorio local de imágenes en el contenedor
+local_dir = /app/images
+# Habilitar sistema de imágenes locales
+local_enabled = true
+# Calidad JPEG para optimización (1-100)
+jpeg_quality = 85
+# Tamaño máximo para redimensionar (ancho,alto)
+max_size = 800,800
