--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,15 +1,23 @@
+# Configuración HTTP simple sin SSL
 server {
     listen 80;
     server_name localhost;
     
-    # Servir archivos estáticos directamente
+    # Headers para evitar upgrade a HTTPS
+    add_header Strict-Transport-Security "max-age=0" always;
+    
+    # Root para archivos estáticos
+    root /app/static;
+    index index.html;
+    
+    # Servir archivos estáticos
     location /static/ {
         alias /app/static/;
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
     
-    # Servir descargas (opcional, para acceso directo)
+    # Servir descargas
     location /downloads/ {
         alias /downloads/;
         autoindex on;
@@ -17,31 +25,24 @@ server {
         autoindex_localtime on;
     }
     
-    # Proxy para la aplicación Flask
+    # Proxy para toda la aplicación Flask (incluyendo imágenes)
     location / {
         proxy_pass http://127.0.0.1:5157;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto http;
+        
+        # Headers anti-HTTPS
+        proxy_hide_header Strict-Transport-Security;
+        add_header Strict-Transport-Security "max-age=0" always;
         
         # CORS headers
         add_header Access-Control-Allow-Origin *;
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
         add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
         
-        # Manejar OPTIONS requests
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin *;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
-            add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
-            add_header Access-Control-Max-Age 1728000;
-            add_header Content-Type 'text/plain; charset=utf-8';
-            add_header Content-Length 0;
-            return 204;
-        }
-        
-        # Timeouts para descargas largas
+        # Timeouts
         proxy_connect_timeout 30s;
         proxy_send_timeout 300s;
         proxy_read_timeout 300s;
@@ -50,10 +51,4 @@ server {
     # Logs
     access_log /app/logs/nginx_access.log;
     error_log /app/logs/nginx_error.log;
-    
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 }
