--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,54 +1,71 @@
-# Configuración HTTP simple sin SSL
 server {
-    listen 80;
-    server_name localhost;
+    listen 80 default_server;
+    server_name _;
     
-    # Headers para evitar upgrade a HTTPS
-    add_header Strict-Transport-Security "max-age=0" always;
+    # Configuración de logs
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
     
-    # Root para archivos estáticos
-    root /app/static;
-    index index.html;
+    # Tamaño máximo de archivos
+    client_max_body_size 100M;
     
-    # Servir archivos estáticos
+    # Timeouts
+    proxy_connect_timeout 60s;
+    proxy_send_timeout 60s;
+    proxy_read_timeout 300s;
+    
+    # Configuración de gzip
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
+    
+    # Archivos estáticos
     location /static/ {
         alias /app/static/;
-        expires 1y;
+        expires 1d;
         add_header Cache-Control "public, immutable";
     }
     
-    # Servir descargas
-    location /downloads/ {
-        alias /downloads/;
-        autoindex on;
-        autoindex_exact_size off;
-        autoindex_localtime on;
+    # Health check estático
+    location /health.html {
+        alias /app/static/health.html;
+        access_log off;
     }
     
-    # Proxy para toda la aplicación Flask (incluyendo imágenes)
+    # API endpoints - proxy a Flask
+    location /api/ {
+        proxy_pass http://127.0.0.1:5157;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Para descargas largas
+        proxy_buffering off;
+        proxy_cache off;
+    }
+    
+    # Página principal y rutas de la SPA
     location / {
         proxy_pass http://127.0.0.1:5157;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto http;
-        
-        # Headers anti-HTTPS
-        proxy_hide_header Strict-Transport-Security;
-        add_header Strict-Transport-Security "max-age=0" always;
-        
-        # CORS headers
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
-        add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
-        
-        # Timeouts
-        proxy_connect_timeout 30s;
-        proxy_send_timeout 300s;
-        proxy_read_timeout 300s;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
     
-    # Logs
-    access_log /app/logs/nginx_access.log;
-    error_log /app/logs/nginx_error.log;
+    # Manejar errores
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    
+    location = /404.html {
+        internal;
+        return 404 "Not Found";
+    }
+    
+    location = /50x.html {
+        internal;
+        return 500 "Server Error";
+    }
 }
