--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -1,22 +1,23 @@
 [supervisord]
 nodaemon=true
 user=root
-logfile=/app/logs/supervisord.log
+logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:nginx]
 command=nginx -g "daemon off;"
 autostart=true
 autorestart=true
-stderr_logfile=/app/logs/nginx_error.log
-stdout_logfile=/app/logs/nginx_access.log
+stderr_logfile=/var/log/supervisor/nginx.err.log
+stdout_logfile=/var/log/supervisor/nginx.out.log
+user=root
 
-[program:flask_app]
-command=python3 /app/app.py
+[program:flask]
+command=gunicorn --bind 127.0.0.1:5157 --workers 2 --timeout 300 --max-requests 1000 --max-requests-jitter 100 app:create_app()
 directory=/app
-user=%(ENV_BASE_USER)s
 autostart=true
 autorestart=true
-stderr_logfile=/app/logs/flask_error.log
-stdout_logfile=/app/logs/flask_output.log
-environment=PYTHONPATH="/app",SSH_USER="%(ENV_SSH_USER)s",SSH_HOST="%(ENV_SSH_HOST)s",SSH_KEY_PATH="%(ENV_SSH_KEY_PATH)s"
+stderr_logfile=/var/log/supervisor/flask.err.log
+stdout_logfile=/var/log/supervisor/flask.out.log
+user=1000
+environment=PYTHONPATH="/app",PYTHONUNBUFFERED="1"
