--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -1,23 +1,37 @@
 [supervisord]
 nodaemon=true
+logfile=/app/logs/supervisord.log
+pidfile=/tmp/supervisord.pid
 user=root
-logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
-
-[program:nginx]
-command=nginx -g "daemon off;"
-autostart=true
-autorestart=true
-stderr_logfile=/var/log/supervisor/nginx.err.log
-stdout_logfile=/var/log/supervisor/nginx.out.log
-user=root
+loglevel=info
 
 [program:flask]
-command=gunicorn --bind 127.0.0.1:5157 --workers 2 --timeout 300 --max-requests 1000 --max-requests-jitter 100 app:create_app()
+command=python3 /app/app.py
 directory=/app
-autostart=true
-autorestart=true
-stderr_logfile=/var/log/supervisor/flask.err.log
-stdout_logfile=/var/log/supervisor/flask.out.log
-user=1000
+user=appuser
 environment=PYTHONPATH="/app",PYTHONUNBUFFERED="1"
+stdout_logfile=/app/logs/flask.log
+stderr_logfile=/app/logs/flask_error.log
+stdout_logfile_maxbytes=50MB
+stderr_logfile_maxbytes=50MB
+stdout_logfile_backups=3
+stderr_logfile_backups=3
+autorestart=true
+startretries=3
+startsecs=10
+redirect_stderr=false
+priority=2
+
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
+stdout_logfile=/app/logs/nginx.log
+stderr_logfile=/app/logs/nginx_error.log
+stdout_logfile_maxbytes=50MB
+stderr_logfile_maxbytes=50MB
+autorestart=true
+startretries=3
+startsecs=5
+priority=1
+
+[group:webapp]
+programs=nginx,flask
