--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 Flask==2.3.3
+Flask-CORS==4.0.0
 Werkzeug==2.3.7
 PyYAML==6.0.1
 Pillow==10.0.1
 requests==2.31.0
 gunicorn==21.2.0
+plotly==5.17.0
+pandas==2.1.3
+numpy==1.25.2
+python-dateutil==2.8.2
