--- a/config.yml
+++ b/config.yml
@@ -31,6 +31,11 @@ images:
   cache_enabled: true
   supported_formats: ["jpg", "jpeg", "png", "webp"]
   max_size: 1024  # píxeles
+  
+  # NUEVA OPCIÓN: Usar metadatos JSON locales
+  # Si está en true, buscará primero en los archivos JSON locales
+  # antes de buscar en la base de datos o descargar desde URLs
+  use_json_metadata: true
 
 # Logging
 logging:
